# agentx-copilot-comparison

./: README.md
em_agentx/: .dockerignore  .gitignore  Dockerfile  Prompts.md  README.md  docker-compose.yml  pyproject.toml
em_agentx/examples/: python_sdk_smoke.py
em_agentx/scripts/: evaluate.sh
em_agentx/src/em_agentx/: __init__.py  __main__.py  app.py  store.py
em_agentx/tests/: conftest.py  test_api.py  test_sdk_smoke.py  test_store.py
em_agentx2/: .dockerignore  Design.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
em_agentx2/.github/workflows/: ci.yml
em_agentx2/docs/agentx/: WORK-ORDER-adls-gen2-lite-emulator.md
em_agentx2/docs/architecture/: ADR-adls-gen2-lite-emulator.md  SPEC-adls-gen2-lite-emulator.md
em_agentx2/docs/devops/: DEVOPS-VALIDATION-adls-gen2-lite-emulator.md
em_agentx2/docs/execution/: DELIVERY-SUMMARY-adls-gen2-lite-emulator.md
em_agentx2/docs/product/: PRD-adls-gen2-lite-emulator.md
em_agentx2/docs/research/: ADLS-GEN2-SDK-COMPATIBILITY-NOTES.md
em_agentx2/docs/reviews/: REVIEW-adls-gen2-lite-emulator.md
em_agentx2/docs/testing/: CERTIFICATION-adls-gen2-lite-emulator.md  TEST-PLAN-adls-gen2-lite-emulator.md
em_agentx2/examples/: python_sdk_smoke.py
em_agentx2/scripts/: evaluate.sh
em_agentx2/src/adls_lite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
em_agentx2/tests/: test_api.py  test_sdk_smoke.py  test_store.py
em_base/: Prompts.md  (+3 more)
em_copilot/: .dockerignore  .gitignore  Agents.md  Copilot_Steps.md  Dockerfile  Prompts.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
em_copilot/examples/: python_sdk_smoke.py
em_copilot/scripts/: evaluate.sh
em_copilot/tests/: __init__.py  conftest.py  test_api.py  test_store.py
(+15 files in other folders)
